Pop OS 19.10 fixes (#24)
* Fix issue with main display not being :0

* Fix the deb with keyboard-colors.json

* Update the changelog

* Might as well make this an officialish release

* Update the readme

* Add manual.tgz to makefile

* typo

* wtf, learn to type rob

* Add manual.tgz to github actions

* Fix contact address

* Fix deb a little bit

* Update version file

--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,10 @@
+s76-keyboard-colors (1.1.0) UNRELEASED; urgency=medium
+
+  * Fixes an issue with the main display not being :0
+  * Fixes the configuration filename 
+
+ -- Rob Landers <landers.robert@gmail.com>  Fri, 24 Jan 2020 01:33:35 +0100
+
 s76-keyboard-colors (1.0) unstable; urgency=medium
 
   * Initial release.
